--- a/SeaBattleClient/MainWindow.ui
+++ b/SeaBattleClient/MainWindow.ui
@@ -25,6 +25,13 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
+      <widget class="QLabel" name="nicknameLabel">
+       <property name="text">
+        <string>nickname</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPlainTextEdit" name="chatLog"/>
@@ -56,6 +63,13 @@
       <widget class="QPushButton" name="connectButton">
        <property name="text">
         <string>Подключиться</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="startButton">
+       <property name="text">
+        <string>Старт</string>
        </property>
       </widget>
      </item>
